--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <h2>Page 1</h2>
         <form name="form1" action="#" method="post" enctype="multipart/form-data">
             <input class="input" type="text"  id='first'name="name" placeholder="Name">
+            <div class="error"></div>
             <input class="input" type="email" id='second' name="email" placeholder="Email">
+            <div class="error"></div>
             <input class="input" type="tel"  id='third'name="phone" placeholder="Phone">
+            <div class="error"></div>
             <input class="input" type="date" name="date" placeholder="Date of your birthday">
+            <div class="error"></div>
             <input class="button" type="submit"  id="one" ></input>
 
         </form>
@@ -40,11 +44,12 @@
             <option value="New Jersey">New Jersey </option>
             <option value="Carolina">Carolina</option>
             <option value="Dakota">Dakota</option>
-            <option value="Louisiana">Louisiana </option>
-            <option value="Kansas">Kansas </option>
-            <option value="Indiana">Indiana </option>
-            <option value="Massachusetts">Massachusetts </option>
+            <option value="Louisiana">Louisiana</option>
+            <option value="Kansas">Kansas</option>
+            <option value="Indiana">Indiana</option>
+            <option value="Massachusetts">Massachusetts</option>
            </select>    
+
            <input class="button" type="submit"  id="two" ></input>
         </form>
        </div>
